syntax = "proto3";

package limes.core;

message Weekday {
  uint64 days_since_start_of_week = 1;
  bool start_week_on_sunday = 2;
}
