syntax = "proto3";

package limes.core.time.proto;

option java_package = "com.limes.core";

option optimize_for = CODE_SIZE;

option cc_enable_arenas = true;

message Time {
  uint64 hour = 1;
  uint64 minute = 2;
  uint64 second = 3;
}

message Date {
  uint64 year = 1;
  uint64 month = 2;
  uint64 day_of_month = 3;
}

message DateTime {
  Date date = 1;
  Time time = 2;
}
